# schematica

./: .gitignore  README.md  SKILL.md  schematica_review.md
references/: roadmap.md  (+10 more)
scripts/: pyproject.toml  requirements.txt
scripts/examples/: __init__.py  castle.py  terrain.py  village.py
scripts/schematica/: __init__.py  __main__.py  constraints.py
scripts/schematica/analysis/: __init__.py  spatial.py
scripts/schematica/blocks/: block.py  download.py  registry.py
scripts/schematica/cli/: parser.py  repl.py  validation.py
scripts/schematica/core/: __init__.py  chunked.py  palette.py  voxel.py
scripts/schematica/export/: litematic.py  materials.py  mcedit.py  report.py  sponge.py  validation.py
scripts/schematica/generators/: noise.py  replace.py  retexture.py  templates.py  texture.py  wfc.py
scripts/schematica/procedural/: __init__.py  detail.py
scripts/schematica/render/: preview.py
scripts/tests/: gen_fixtures.py  test_advanced_cli.py  test_advanced_features.py  test_advanced_replace.py  test_advanced_shapes.py  test_blocks.py  test_boolean.py  test_chunked.py  test_chunked_session.py  test_cli.py  test_cli_extensions.py  test_core.py  test_detail.py  test_download.py  test_export.py  test_export_formats.py  test_full_surface.py  test_golden.py  test_heightmap.py  test_hprefix.py  test_markers_regions.py  test_mesh.py  test_parser.py  test_preview.py  test_review_fixes.py  test_review_improvements.py  test_sdf.py  test_session.py  test_shapes.py  test_shapes_base.py  test_spatial.py  test_validation.py  test_validation_direct.py  test_wfc.py
(+14 files in other folders)
